# AutoEval-Sum

./: .env.example  .gitignore  Makefile  README.md  continue.md  docker-compose.yml  holisticPlan.md  phasedPlan.md  prefPatterns.md
apps/backend/: Dockerfile  pyproject.toml
apps/backend/scripts/: setup_corpus.py  setup_dynamodb.py  setup_pinecone.py
apps/backend/src/autoeval_sum/agents/: curriculum.py  eval_author.py  judge.py  summarizer.py
apps/backend/src/autoeval_sum/agents/prompts/: curriculum.py  eval_author.py  judge.py  rubric.py  summarizer.py
apps/backend/src/autoeval_sum/api/: app.py  dependencies.py  models.py
apps/backend/src/autoeval_sum/api/routes/: health.py  ingestion.py  runs.py
apps/backend/src/autoeval_sum/config/: settings.py
apps/backend/src/autoeval_sum/db/: client.py  results.py  runs.py  suites.py
apps/backend/src/autoeval_sum/ingestion/: enrichment.py  fetcher.py  filters.py  persist.py
apps/backend/src/autoeval_sum/models/: documents.py  runs.py  schemas.py
apps/backend/src/autoeval_sum/runtime/: __init__.py  graph.py  policies.py  queue.py  state.py
apps/backend/src/autoeval_sum/runtime/nodes/: curriculum.py  eval_author.py  execute.py  finalize.py  helpers.py  init_run.py  judge.py  load_docs.py
apps/backend/src/autoeval_sum/vector/: __init__.py  client.py  dedup.py  memory.py
apps/frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/app/api/backend/[...path]/: route.ts
apps/frontend/src/components/: ComparePanel.tsx  DiffSummary.tsx  ExportButton.tsx  FailureTagChart.tsx  MetricsCards.tsx  RunControls.tsx  StatusTimeline.tsx  WorstCasesTable.tsx
apps/frontend/src/hooks/: useCompareLatest.ts  useRunResults.ts  useRunStatus.ts
apps/frontend/src/lib/: api.ts  env.ts  types.ts
docs/: continue.md
