[project]
name = "autoeval-sum"
version = "0.1.0"
description = "Autonomous evaluation suite improvement system for summarization testing"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Config & validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    # AWS / DynamoDB
    "aioboto3>=13.0.0",
    # LLM orchestration
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "google-genai>=0.8.0",
    "google-generativeai>=0.8.0",
    # Vector store
    "pinecone[grpc]>=5.0.0",
    # NLP utilities
    "spacy>=3.7.0",
    # Dataset
    "datasets>=3.0.0",
    # ID generation (UUIDv7)
    "uuid6>=2024.1.12",
    # HTTP client (test + internal)
    "httpx>=0.27.0",
    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "boto3-stubs[dynamodb]>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoeval_sum"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "Q"]

[tool.ruff.lint.per-file-ignores]
# FastAPI routes intentionally use Depends() in defaults (B008) and
# re-raise HTTPException inside except blocks (B904) — both are idiomatic.
"src/autoeval_sum/api/routes/*.py" = ["B008", "B904"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "aioboto3.*",
    "boto3.*",
    "botocore.*",
    "langchain.*",
    "langgraph.*",
    "langchain_google_genai.*",
    "google.generativeai.*",
    "google.genai.*",
    "pinecone.*",
    "spacy.*",
    "datasets.*",
    "uuid6.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
